2012-01-21  Per Bothner  <per@bothner.com>

	* standard/object.java (scanClassDef): If seen ABSTRACT_ACCESS
	then set IS_ABSTRACT on ClassExp.
	(matchAccess1):  Map "abstract" to ABSTRACT_ACCESS.

2012-01-19  Per Bothner  <per@bothner.com>

	* lang/SyntaxForms.java (identifierEquals): New static method.
	(freeIdentifierEquals): Removed - subsumed by identifierEquals.
	* standard/Scheme.java (initScheme): Define bound-identifier=?.

2012-01-17  Per Bothner  <per@bothner.com>

	* standard/expt.java (expt): Force operands.

2012-01-15  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define "lazy" and "eager"
	from SRFI-45 and R7RS.
	(getTypeMap): Rename type "lazy" to "promise".

2012-01-09  Per Bothner  <per@bothner.com>

	* Shell.java (runClass): New static method.
	(runFileOrClass): Use runClass.
	* standard/load.java (apply2): If file not found, try loading
	and running class, similar with behavior of -f command-line option.

2012-01-01  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Remove %make-promise definition.
	(getTypeMap): Define type "lazy".
	(formatType): Handle LazyType.

2011-12-19  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): New R7RS bytevector functions.

2011-12-10  Per Bothner  <per@bothner.com>

	* Shell.java (run): Set PARSE_INTERACTIVE_MODULE module so
	setInteractiveName gets called at the start of parse instead of after.

2011-12-02  Per Bothner  <per@bothner.com>

	* standard/SchemeCompilation.java (checkDefaultBinding): Catch
	NoClassDefFoundError so we can emit informative warning.
	* lang/Translator.java (rewrite): Change API so we can distinguidh
	when called from scan looking for macros - in which case we don't
	want to call checkDefaultBinding, both for performance, and to
	avoid a duplicate warning.

2011-11-29  Per Bothner  <per@bothner.com>

	* lang/Translator.java (pushRenamedAlias, popRenamedAlias): We don't